<resources>
    <string name="app_name">Oh Reminder</string>
    <string name="alarm_no_title">(No Title)</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="nav_item_alaram">Alarm</string>
    <string name="memoGroupTitle">Memo</string>
    <string name="nav_item_memo">All Memo</string>
    <string name="nav_item_cate">Category</string>
    <string name="nav_item_setting">Settings</string>
    <string name="nav_item_keyword">Keyword</string>
    <string name="group_title_repeat">Repeat alarm</string>
    <string name="group_title_set_date">Specify Date</string>
    <string name="group_title_postpone">Postponed</string>
    <string name="group_title_tomorrow">Tomorrow</string>
    <string name="group_title_after_day_tomorrow">The day after tomorrow</string>
    <string name="group_title_time_range">Time range</string>
    <string name="btn_memo_modify">Edit Text</string>
    <string name="btn_memo_alarm">Add Alarm</string>
    <string name="btn_memo_alarm_edit">Edit Alarm</string>
    <string name="btnToggleViewTimer">Timer Mode</string>
    <string name="btnToggleViewNoTimer">Alarm Mode</string>
    <string name="dialog_title_alaram">Alram Add/Edit</string>
    <string name="dialog_title_memo">Memo Add/Edit</string>
    <string name="dialog_title_timer">Timer Add/Edit</string>
    <string name="timerBtnToggleOn">Cancel</string>
    <string name="timerBtnToggleOff">Start</string>
    <string name="setting">Settings</string>
    <string name="setting_menu_title_use_alarm">Alarm Sound/Vibration On</string>
    <string name="setting_menu_title_use_tts">Alarm TTS On</string>
    <string name="setting_menu_title_toggle_alarm">Turn on Do Not Disturb mode</string>
    <string name="banner_ad_unit_id">ca-app-pub-8072677228798230/9898207305</string>
    <string name="banner_ad_unit_id_front">ca-app-pub-8072677228798230/2762328471</string>
    <string name="banner_ad_unit_id_webview">ca-app-pub-8072677228798230/1453912904</string>
    <string name="banner_ad_unit_id_alarm_noti">ca-app-pub-8072677228798230/7025967221</string>
    <string name="alarm_sort_type_time">Time Order</string>
    <string name="alarm_sort_type">Type Order</string>
    <string name="alarm_date_today">Today</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">share</string>
    <string name="dialog_title_datepick">Date Pick</string>
    <string name="option">option</string>
    <string name="delete_all">Delete all</string>
    <string name="cal_mon">Mon</string>
    <string name="cal_tue">Tue</string>
    <string name="cal_wed">Wed</string>
    <string name="cal_Thu">Thu</string>
    <string name="cal_fri">Fri</string>
    <string name="cal_sat">Sat</string>
    <string name="cal_sun">Sun</string>
    <string name="dialog_alarm_date_option">Date Option</string>
    <string name="dialog_alarm_date_pick">Date</string>
    <string name="dialog_alarm_time">Time</string>
    <string name="dialog_alarm_time_start">Start Time</string>
    <string name="dialog_alarm_time_end">End Time</string>
    <string name="dialog_alarm_repeat_day">Repeat Day</string>
    <string name="dialog_alarm_holiday_option">Holiday Option</string>
    <string name="dialog_alarm_title">Title</string>
    <string name="dialog_alarm_option">Alarm Option</string>
    <string name="dialog_alarm_sound">Sound Option</string>
    <string name="dialog_alarm_tts_play">Voice Play</string>
    <string name="dialog_alarm_preinform">pre-inform</string>
    <string name="add">Add</string>
    <string name="dialog_alarm_linked_function">Linked function</string>
    <string name="dialog_alarm_sp_notification">One Time Notification</string>
    <string name="dialog_alarm_sp_user_stop">Alarm until user stops</string>
    <string name="dialog_alarm_mid_time">add Intermediate notification </string>
    <string name="group_title_repeat_month">Repeat Month</string>
    <string name="group_title_repeat_day">Repeat Day</string>
    <string name="dialog_alarm_minute_before">minute before</string>
    <string name="dialog_alarm_minute_after">minute after</string>
    <string name="none">None</string>
    <string name="default_sound">default</string>
    <string name="dialog_alarm_sp_sound_tts">Text to speech Voice</string>
    <string name="dialog_alarm_sp_sound_record">Record Voice</string>
    <string name="dialog_alarm_sp_sound_file">Play Sound File</string>
    <string name="dialog_timer_time">Time limit</string>
    <string name="timer_list_limit_text">limited time</string>
    <string name="category_message_del">Are you sure you want to delete both categories and their notes?</string>
    <string name="message_removed">Removed</string>
    <string name="message_failed">Fail</string>
    <string name="dialog_category_title">Category Add/Edit</string>
    <string name="btn_sort">Sort</string>
    <string name="memo_sort_edit_decending">Edit date decending</string>
    <string name="memo_sort_edit_ascending">Edit date ascending</string>
    <string name="memo_sort_importance_ascending">Importance ascending</string>
    <string name="memo_sort_importance_decending">Importance decending</string>
    <string name="dialog_memo_sort_title">Sorting Option</string>
    <string name="dialog_memo_importance">Importance</string>
    <string name="btn_memo_finish">Edit Finish</string>
    <string name="finish">Finish</string>
    <string name="setting_data_title">Data management</string>
    <string name="setting_data_cont">Back up and recover all your data to the Documents folder.</string>
    <string name="setting_btn_backup">Data backup</string>
    <string name="setting_btn_restore">Data restore</string>
    <string name="setting_status_bar_title">Displaying ongoing alarms in the status bar</string>
    <string name="setting_statu_bar_cont">If you enable the status bar, to prevent alarm service from being stopped at low memory, thus lowering the probability that the alarm will not sound</string>
    <string name="setting_use_sound_and_vibe">If you turn off the option, no vibration or sound occurs when the notification. if the option is turned on In manners mode, only vibrate</string>
    <string name="setting_play_tts">If you turn off the option, the alert will not be read as a voice when the alert sounds. Recordings are the same.</string>
    <string name="setting_play_void_manner_mode">Play voice/recordings in manners mode</string>
    <string name="setting_voice_volume">Voice Volume</string>
    <string name="setting_disturb_title">Do Not Disturb Mode On</string>
    <string name="setting_disturb_cont">While this option is on, you will not receive any notifications.</string>
    <string name="dialog_alarm_msg_select_repeat">Please choose a day to repeat</string>
    <string name="dialog_alarm_msg_select_memo">Please select a memo</string>
    <string name="dialog_alarm_msg_duplication_call">There are duplicate times</string>
    <string name="btn_etc_view">View memo</string>
    <string name="noti_activity_msg_postponed">Postponed</string>
    <string name="msg_failed_insert">Failed to insert</string>
    <string name="msg_failed_conversion">State conversion failed</string>
    <string name="dialog_timer_msg_select_time">Please specify the time.</string>
    <string name="service_alarm_scheduled">Alarm scheduled</string>
    <string name="service_noti_msg_view_memo_touch">Touch to see memo</string>
    <string name="service_noti_msg_scroll_postpone">You can delay notifications by scrolling down</string>
    <string name="service_noti_postpone">Postpone</string>
    <string name="db_failed_generate_id">Fail! ID not generated</string>
    <string name="alarm_postpone_title">Postpone</string>
    <string name="alarm_postpone_msg_invalid_id">Alarm Id is invalid. Could not fetch data</string>
    <string name="success">Success</string>
    <string name="fragment_alarm_msg_delete_confirm">Are you sure you want to delete this alarm?</string>
    <string name="fragment_memo_msg_delete_confirm">Are you sure you want to delete this memo?</string>
    <string name="msg_failed_modify">Failed to modify</string>
    <string name="timer_is_running">There is a running timer</string>
    <string name="dialog_cate_msg_subject">Please enter the subject</string>
    <string name="uncategorized">Uncategorized</string>
    <string name="dialog_memo_msg_category_id_not">Category ID not delivered</string>
    <string name="dialog_memo_msg_no_title">Please enter the subject</string>
    <string name="fragment_memo_no_relation">Could not get Relation information</string>
    <string name="fragment_memo_already_alarm">Alarm is already assigned</string>
    <string name="msg_failed_relation_insert_db">Relation insert failed</string>
    <string name="fragment_msg_delete_alarm">Deleted existing alarm</string>
    <string name="fragment_msg_delete_alarm_failed">Failed to delete existing alarm</string>
    <string name="framgent_memo_confirm_delete_memo">Are you sure you want to delete this memo?</string>
    <string name="caution">Caution</string>
    <string name="fragment_setting_msg_cancel_notibar">Do you really want to receive status bar notifications?</string>
    <string name="fragment_setting_msg_restore">All existing data will be deleted. Would you like to recover your data?</string>
    <string name="tts_author_failed">Audio permission was not obtained</string>
    <string name="main_activity_etctype_invalid">EtcType is invalid</string>
    <string name="confirm_msg_quit">Are you sure you want to quit?</string>
    <string name="title_activity_intro">Intro</string>
    <string name="category_memo_count">memo</string>
    <string name="ex_alarm_title">Example) Alarm</string>
    <string name="ex_memo_title">Example) Things to buy in a super</string>
    <string name="ex_memo_cont">bottled water\nIce cream\nmelon</string>
    <string name="alarm_msg_move_memo">If you move to the memo screen, the alarms that have not been saved will disappear. \nGo to the notes screen?</string>
    <string name="keyword">nav_item_keyword</string>
    <string name="nav_item_dashboard">Dashboard</string>
    <string name="dashboard_title_next_alarm">Next Alarm</string>
    <string name="dashboard_title_memo">Memo List</string>
    <string name="dashboard_no_alarm">No next event</string>
    <string name="minute">Minute</string>
    <string name="minutes">minutes</string>
    <string name="dialog_alarm_preinformOption">pre-inform option</string>
    <string name="customRecorder_playing_voice">Playing voice</string>
    <string name="dialog_alarm_record_caution">- For reminders other than the specified time, the TTS engine is used instead of the recording sound</string>
    <string name="msg_file_not_found">File not found</string>
    <string name="hours">hours</string>
    <string name="reset">Reset</string>
    <string name="random">Random</string>
    <string name="ten_minute">10min.</string>
    <string name="twenty_minute">20min.</string>
    <string name="thirty_minute">30min.</string>
    <string name="twelve_hours">12hours</string>
    <string name="before">before</string>
    <string name="after">after</string>
    <string name="update_log">Update Log</string>
    <string name="privacy_policy">privacy policy</string>
    <string name="show">Show</string>
    <string name="record">Record</string>
    <string name="camera">Camera</string>
    <string name="video">Video</string>
    <string name="files">Files</string>
    <string name="pictures">Pictures</string>
    <string name="error">Error</string>
    <string name="setting_data_migration_complete">Data migration complete</string>
    <string name="file_not_found">File not found</string>
    <string name="complete">Complete</string>
</resources>