<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Federico Iosue (federico.iosue@gmail.com)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:id="@+id/attachment_dialog_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="8dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:scrollbarSize="4dp"
    android:scrollbarStyle="insideInset"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="start|left">

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
            android:drawablePadding="10dp"
            android:padding="6dp"
            android:text="@string/camera"
            android:textSize="16sp"
            pixlui:typeface="Roboto-Regular.ttf"
            />

        <!--<com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:drawableLeft="@drawable/ic_videocam_black_24dp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/video"
            android:textSize="16sp"
            pixlui:typeface="Roboto-Regular.ttf"
            />-->

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:drawableLeft="@drawable/ic_insert_drive_file_black_24dp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/files"
            android:textSize="16sp"
            pixlui:typeface="Roboto-Regular.ttf"
             />

        <com.neopixl.pixlui.components.textview.TextView
            android:id="@+id/recording"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/icon_selector"
            android:drawableLeft="@drawable/ic_mic_black_24dp"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/record"
            android:textSize="16sp"
            pixlui:typeface="Roboto-Regular.ttf"
            />




    </LinearLayout>

</ScrollView>